--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -122,11 +122,11 @@ title: Page1
 						.card_thumbnail_small
 							%img(src="/images_s/card_small/img1.png")
 					.card_small_text
-						.post_title
+						.post_title2
 							Science Funders Struggle to Deal with Sexual Harassers
 					.card_small_text_bottom
-						.line_dark
-						.tag_big
+						.line_dark2
+						.tag_big2
 							SUSTAINABILITY
 			.card_small_wrapper
 				.card_small
@@ -134,11 +134,11 @@ title: Page1
 						.card_thumbnail_small
 							%img(src="/images_s/card_small/img2.png")
 					.card_small_text
-						.post_title
+						.post_title2
 							U.S. to Study Zika Link to Guillain–Barré in Puerto Rico
 					.card_small_text_bottom
-						.line_dark
-						.tag_big
+						.line_dark2
+						.tag_big2
 							HEALTH - PUBLIC
 			.card_small_wrapper
 				.card_small
@@ -146,11 +146,11 @@ title: Page1
 						.card_thumbnail_small
 							%img(src="/images_s/card_small/img3.png")
 					.card_small_text
-						.post_title
+						.post_title2
 							Beyond Resveratrol: The Anti-Aging NAD Fad
 					.card_small_text_bottom
-						.line_dark
-						.tag_big
+						.line_dark2
+						.tag_big2
 							HEALTH
 			.card_small_wrapper
 				.card_small
@@ -158,11 +158,11 @@ title: Page1
 						.card_thumbnail_small
 							%img(src="/images_s/card_small/img4.png")
 					.card_small_text
-						.post_title
+						.post_title2
 							The Best Diet for Your Brain
 					.card_small_text_bottom
-						.line_dark
-						.tag_big
+						.line_dark2
+						.tag_big2
 							HEALTH - NEUROLOGICAL
 		.index_row
 			.card_small_wrapper
@@ -171,11 +171,11 @@ title: Page1
 						.card_thumbnail_small
 							%img(src="/images_s/card_small/img5.png")
 					.card_small_text
-						.post_title
+						.post_title2
 							The Truth About Exoplanets
 					.card_small_text_bottom
-						.line_dark
-						.tag_big
+						.line_dark2
+						.tag_big2
 							THE SCIENCES - SPACE
 			.card_small_wrapper
 				.card_small
@@ -183,11 +183,11 @@ title: Page1
 						.card_thumbnail_small
 							%img(src="/images_s/card_small/img6.png")
 					.card_small_text
-						.post_title
+						.post_title2
 							Apple Opposes Order to Help FBI Unlock iPhone
 					.card_small_text_bottom
-						.line_dark
-						.tag_big
+						.line_dark2
+						.tag_big2
 							TECH
 			.card_small_wrapper
 				.card_small
@@ -195,11 +195,11 @@ title: Page1
 						.card_thumbnail_small
 							%img(src="/images_s/card_small/img7.png")
 					.card_small_text
-						.post_title
+						.post_title2
 							The Science behind the DEA's Long War on Marijuana
 					.card_small_text_bottom
-						.line_dark
-						.tag_big
+						.line_dark2
+						.tag_big2
 							POLICY & ETHICS
 			.card_small_wrapper
 				.card_small
@@ -207,11 +207,11 @@ title: Page1
 						.card_thumbnail_small
 							%img(src="/images_s/card_small/img8.png")
 					.card_small_text
-						.post_title
+						.post_title2
 							Drones Could Speed Up HIV Tests In Remote Areas
 					.card_small_text_bottom
-						.line_dark
-						.tag_big
+						.line_dark2
+						.tag_big2
 							PUBLIC HEALTH
 	.shelf_wrapper
 		.index_row
@@ -375,3 +375,103 @@ title: Page1
 					.card_video_text
 						.video_title
 							Fish on Evolution’s Fast Track
+	.shelf_wrapper
+		.index_row
+			.section_title
+				%h1 PODCAST
+			.section_line
+			.podcast_filter_wrapper
+				.podcast_filter
+					.recent_wrapper
+						.filter_text
+							RECENT PODCASTS
+						.arrow_img
+							%img(src="/images_s/video/arrow.png")
+					.series_wrapper
+						.filter_text
+							SERIES
+						.arrow_img
+							%img(src="/images_s/video/arrow.png")
+					.topics_wrapper
+						.filter_text
+							TOPICS
+						.arrow_img
+							%img(src="/images_s/video/arrow.png")
+			.podcast_wrapper
+				.podcast_card
+					.podcast_play_button_wrapper
+						.podcast_play_button
+							.triangle_podcast
+								%img(src="/images_s/video/tri.png")
+					.podcast_download_button_wrapper
+						.podcast_download_button
+							.download
+								%img(src="/images_s/video/download.png")
+					.podcast_title_wrapper
+						.podcast_title
+							Gravitational Waves Found: Kip Thorne Explains
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							SCIENCE TALK
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							THE SCIENCES
+					.podcast_time_wrapper
+						.date_podcast
+							February 11, 2016 - By Josh Fischman and Steve Mirsky
+						.time_podcast
+							|  15:42
+			.podcast_wrapper
+				.podcast_card2
+					.podcast_play_button_wrapper
+						.podcast_play_button
+							.triangle_podcast
+								%img(src="/images_s/video/tri.png")
+					.podcast_download_button_wrapper
+						.podcast_download_button
+							.download
+								%img(src="/images_s/video/download.png")
+					.podcast_title_wrapper
+						.podcast_title
+							Greenland's Meltwater May Fertilize Fjords with Phosphorus
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							60-SECOND SCIENCE
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							SUSTAINABILITY
+					.podcast_time_wrapper
+						.date_podcast
+							February 11, 2016 - By Christopher Intagliata
+						.time_podcast
+							|   02:02
+			.podcast_wrapper
+				.podcast_card2
+					.podcast_play_button_wrapper
+						.podcast_play_button
+							.triangle_podcast
+								%img(src="/images_s/video/tri.png")
+					.podcast_download_button_wrapper
+						.podcast_download_button
+							.download
+								%img(src="/images_s/video/download.png")
+					.podcast_title_wrapper
+						.podcast_title
+							Opioid Epidemic Gets Treatment Prescription
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							60-SECOND SCIENCE
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							HEALTH
+					.podcast_time_wrapper
+						.date_podcast
+							February 17, 2016 - By Steve Mirsky
+						.time_podcast
+							|   02:30
