--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -1,2 +1,66 @@
 %footer#footer
-  Footer
+	.sa_footer
+		.col_wrapper
+			.col
+				.col_item
+					Store
+				.col_item
+					About
+				.col_item
+					Press Room
+			.col
+				.col_item
+					FAQs
+				.col_item
+					Contact Us
+				.col_item
+					Site Map
+			.col
+				.col_item
+					Advertise
+				.col_item
+					Special Ad Sections
+				.col_item
+					SA Custom Media
+			.col
+				.col_item
+					Terms of Use
+				.col_item
+					Privacy Policy
+				.col_item
+					Use of Cookies
+		.divider_line
+		.bottom_text_wrapper1
+			.text1
+				Scientific American is part of Springer Nature, which owns or has commercial relations with thousands of scientific publications (many of them can be found atwww.springernature.com/us). Scientific American maintains a strict policy of editorial independence in reporting developments in science to our readers.
+		.bottom_text_wrapper2
+			.text2_1
+				© 2016 SCIENTIFIC AMERICAN, A DIVISION OF NATURE AMERICA, INC. 
+			.text2_2
+				ALL RIGHTS RESERVED.
+		.footer_bar
+
+	-# .nav
+	-# 	.wrapper
+	-# 		.logo
+	-# 			%ul.title
+	-# 				%li 
+	-# 					%img(src="/images_s/header/logo.png")
+	-# 		.navRow
+	-# 			%ul.title
+	-# 				%li
+	-# 					%a{:href => ''} THE SCIENCES
+	-# 				%li MIND
+	-# 				%li HEALTH
+	-# 				%li TECH
+	-# 				%li SUSTAINABILITY
+	-# 				%li EDUCATION
+	-# 				%li 
+	-# 					%a{:href => ''} VIDEO
+	-# 				%li 
+	-# 					%a{:href => ''} PODCASTS
+	-# 				%li 
+	-# 					%a{:href => ''} BLOGS
+	-# 				%li STORE
+	-# 				%li 
+	-# 					%img(src="/images_s/header/search.png")
