--- a/source/stylesheets/partials/_footer.scss
+++ b/source/stylesheets/partials/_footer.scss
@@ -1,5 +1,80 @@
-footer {
-  border-top: 1px solid $base-border-color;
-  margin: 2em 0;
-  padding-top: 2em;
+$footer_text2: #A7A7A7;
+
+
+
+.sa_footer {
+	display: block;
+  	height: 334px;
+	background-image: url(../../images_s/footer/bg.png);
+	background-size: 100% 100%;
+	margin-top: 80px;
 }
+
+.col_wrapper {
+	@include outer-container;
+	position: relative;
+	float: top;
+	height: 165px;
+}
+
+.col {
+	height: 100px;
+	margin: 36px 0px;
+	@include media($desktop){
+      @include span-columns (3);
+	}
+}
+
+.col_item {
+	color: $podcast_time;
+	font-size: 13px;
+	font-family: helvetica;
+	text-align: center;
+	margin-bottom: 20px;
+}
+
+.divider_line {
+	@include outer-container;
+	width: 100%;
+	height: 1px;
+	background-color: $podcast_border;
+}
+
+.bottom_text_wrapper1 {
+	@include outer-container;
+	text-align: center;
+}
+
+.text1 {
+	font-family: helvetica;
+	font-size: 12px;
+	color: $podcast_time;
+	margin: 30px 0px 30px 0px;
+	@include media($desktop){
+      @include span-columns (10);
+	}
+	@include shift(1);
+}
+
+.bottom_text_wrapper2 {
+	@include outer-container;
+	text-align: center;
+	margin-bottom: 30px;
+}
+
+.text2_1,
+.text2_2 {
+	font-family: georgia;
+	font-size: 12px;
+	color: $footer_text2;
+}
+
+.footer_bar {
+	position: relative;
+	float: bottom;
+	display: block;
+	width: 100%;
+	height: 12px;
+	background-color: $text-hover-blue;
+}
+
